Finished updating lab. Added proper positioning to tables and tooltips. Added CSS to tooltips for proper responsive design.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
             </p>
         </header>
         <section class="table-grid">
-            <section class="table available">1
-                <!-- TOOLTIP PROTOTYPE -->
-                <!-- <section class="tooltip">
-                    <p class="name">Name: Yasmine</p>
-                    <p class="party">Size of party: 5</p>
-                </section> -->
-            </section>
+            <section class="table available">1</section>
             <section class="table available">2</section>
             <section class="table available">3</section>
             <section class="table available">4</section>
